Properly handle JsonSerialize array types (#41645)